# codexx

./: .bazelrc  MODULE.bazel  defs.bzl  justfile  workspace_root_test_launcher.sh.tpl
.github/: dotslash-config.json
.github/actions/macos-code-sign/: action.yml
.github/actions/prepare-bazel-ci/: action.yml
.github/actions/run-argument-comment-lint/: action.yml
.github/actions/setup-bazel-ci/: action.yml
.github/actions/setup-msvc-env/: action.yml
.github/actions/setup-rusty-v8-musl/: action.yml
.github/scripts/: compute-bazel-windows-path.ps1  load-bazel-ci-config.sh  run-bazel-ci.sh  run-bazel-query-ci.sh  rusty_v8_bazel.py  setup-dev-drive.ps1  test_rusty_v8_bazel.py  verify_tui_core_boundary.py
.github/workflows/: bazel.yml  blob-size-policy.yml  cargo-deny.yml  ci.yml  cla.yml  close-stale-contributor-prs.yml  codexx-binaries.yml  rust-ci-full.yml  rust-ci.yml  rust-release-argument-comment-lint.yml  rust-release-prepare.yml  rust-release-windows-cross-compile-poc.yml  rust-release-windows.yml  rust-release-zsh.yml  rust-release.yml  rusty-v8-release.yml  sdk.yml  v8-canary.yml  windows-ci-repro-21652.yml  windows-ci-repro-main-21652.yml  windows-sideband-old-main-repro.yml
codex-cli/scripts/: build_npm_package.py  install_native_deps.py
codex-rs/: Cargo.toml  README.md
codex-rs/.config/: nextest.toml
codex-rs/agent-graph-store/src/: local.rs
codex-rs/agent-identity/src/: lib.rs
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  client_tests.rs  events.rs  facts.rs  reducer.rs
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-client/: Cargo.toml
codex-rs/app-server-client/src/: lib.rs  remote.rs  sftp_upload.rs
codex-rs/app-server-daemon/: README.md
codex-rs/app-server-daemon/src/: lib.rs  managed_install.rs  update_loop.rs
codex-rs/app-server-protocol/: BUILD.bazel  Cargo.toml
codex-rs/app-server-protocol/examples/: generate-proto.rs
codex-rs/app-server-protocol/proto/: codex.app_server.v2.proto
codex-rs/app-server-protocol/src/: export.rs  lib.rs  proto.rs
codex-rs/app-server-protocol/tests/: proto_compat.rs
codex-rs/app-server-test-client/src/: lib.rs
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  command_exec.rs  config_api.rs  config_manager.rs  config_manager_service.rs  config_manager_service_tests.rs  extensions.rs  fs_api.rs  in_process.rs  lib.rs  main.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs  models.rs  outgoing_message.rs  plugin_backend_bridge.rs  plugin_install_suggest.rs  request_processors.rs  request_serialization.rs  thread_state.rs  transport.rs  transport_tests.rs
codex-rs/apply-patch/src/: invocation.rs  (+3 more)
codex-rs/chatgpt/: Cargo.toml
codex-rs/cli/: BUILD.bazel  Cargo.toml
codex-rs/code-mode/: Cargo.toml
codex-rs/codex-mcp/: Cargo.toml
codex-rs/config/: Cargo.toml
codex-rs/core/: Cargo.toml  config.schema.json  root_agent_prompt.md
codex-rs/core-api/: Cargo.toml
codex-rs/core-plugins/: Cargo.toml
codex-rs/core-skills/: Cargo.toml
codex-rs/devicecheck-probe/: DeviceCheckProbe.swift  Info.plist  build-probe.sh
codex-rs/docs/: bazel.md  mcp_subspan_tracing.md
codex-rs/exec/: Cargo.toml
codex-rs/exec-server/: Cargo.toml  README.md
codex-rs/ext/extension-api/: Cargo.toml
codex-rs/ext/extension-api/examples/: enabled_extensions.rs
codex-rs/ext/extension-api/examples/enabled_extensions/: shared_state_extension.rs
codex-rs/ext/extension-api/src/: contributors.rs  lib.rs  registry.rs  state.rs
codex-rs/ext/extension-api/src/contributors/: prompt.rs  session_lifecycle.rs  tool.rs
codex-rs/ext/memories/: Cargo.toml
codex-rs/ext/memories/src/: citation_output.rs  ctx.rs  lib.rs  list_tool.rs  prompt_contributor.rs  tool_contributor.rs
codex-rs/ext/memories/src/contributors/: citations.rs  mod.rs  prompt.rs  tools.rs
codex-rs/ext/memories/src/tools/: list.rs  mod.rs  read.rs  search.rs
codex-rs/kernel/: BUILD.bazel  Cargo.toml
codex-rs/kernel/src/: lib.rs  prompt.rs  sampling.rs  tools.rs
codex-rs/mcp-server/: Cargo.toml
codex-rs/models-manager/: models.json
codex-rs/rollout/: Cargo.toml
codex-rs/thread-store/: Cargo.toml  README.md
codex-rs/tools/: BUILD.bazel
codex-rs/tui/: BUILD.bazel  Cargo.toml
codex-rs/windows-sandbox-rs/: Cargo.toml  sandbox_smoketests.py
codex-rs/worktree/: BUILD.bazel  Cargo.toml
codex-rs/worktree/src/: dirty.rs  git.rs  lib.rs  manager.rs  metadata.rs  paths.rs
codex-rs/worktree/tests/: git_backend.rs
docs/: config.md  tui-chat-composer.md
patches/: BUILD.bazel  rules_cc_rusty_v8_custom_libcxx.patch  v8_bazel_rules.patch  v8_module_deps.patch
scripts/: build_makeself_codex.py  mock_responses_websocket_server.py  stage_standalone_installer_archives.py  test-remote-env.sh
scripts/install/: install.ps1  install.sh
sdk/python/: README.md  _runtime_setup.py
signatures/: cla.json
(+1079 files in other folders)
