[package]
edition.workspace = true
license.workspace = true
name = "codex-code-mode"
version.workspace = true

[lib]
doctest = false
name = "codex_code_mode"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-channel = { workspace = true }
async-trait = { workspace = true }
codex-protocol = { workspace = true }
deno_core_icudata = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
# v8 146.x depends on temporal_rs 0.1.2, which uses ICU unstable
# calendar APIs. This direct dependency keeps path installs without
# --locked on the compatible ICU minor.
icu_calendar = { workspace = true }
v8 = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
