[package]
edition.workspace = true
license.workspace = true
name = "codex-extension-api"
version.workspace = true

[lib]
name = "codex_extension_api"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-tools = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
codex-guardian = { workspace = true }
codex-git-attribution = { workspace = true }
codex-memories = { workspace = true }
codex-multi-agent-v2 = { workspace = true }
