[package]
edition.workspace = true
license.workspace = true
name = "codex-memories"
version.workspace = true

[lib]
name = "codex_memories"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-extension-api = { workspace = true }
codex-memories-read = { workspace = true }
codex-protocol = { workspace = true }
codex-tools = { workspace = true }
codex-utils-absolute-path = { workspace = true }
codex-utils-stream-parser = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
